fixing alignment

--- a/SASS/layout/_body.scss
+++ b/SASS/layout/_body.scss
@@ -4,7 +4,7 @@
 
 body{
     width: 100%;
-    margin: 0;
+    margin:auto;
     max-width: 1440px;
 
     a{
