--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
 
 body {
   width: 100%;
-  margin: 0;
+  margin: auto;
   max-width: 1440px;
 }
 body a {
